--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -5,6 +5,7 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_item.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_particles.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_nodetimer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_modchannels.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
