--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -10,6 +10,8 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_modchannels.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_itemstackmeta.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_metadata.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_vmanip.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_playermeta.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
