--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -12,6 +12,7 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_metadata.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_vmanip.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_playermeta.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_rollback.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
