--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -14,6 +14,7 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_playermeta.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_rollback.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_nodemeta.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_util.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
