--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -13,6 +13,8 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_metadata.cpp
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/native_nodemeta.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_util.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_server.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
