--- a/src/script/native_api/CMakeLists.txt
+++ b/src/script/native_api/CMakeLists.txt
@@ -17,6 +17,7 @@ set(common_SCRIPT_NATIVE_API_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/native_util.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/native_server.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/native_mapgen.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/native_http.cpp
 	PARENT_SCOPE)
 
 set(client_SCRIPT_NATIVE_API_SRCS
